# simple-mcproxy

./: Cargo.toml  LICENSE.txt  README.md
config/: config.json.template
src/: config.rs  main.rs  packet.rs
